# image_processor

./: CMakeLists.txt  examples.md  image_processor.cpp  readme.md  test.cpp
Image/: Color.cpp  Color.h  Filters.cpp  Filters.h  Image.cpp  Image.h
Parsing/: argument_parser.cpp  argument_parser.h
Writing_and_reading/: Reader.cpp  Reader.h  Utils.h  Writer.cpp  Writer.h
